feat: creact-app

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "brainhub",
+  "name": "bh-events",
   "version": "1.0.0",
   "main": "index.js",
   "author": "Julio Soto <jsberlanga@gmail.com>",
