--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "server",
+  "name": "bh-events-server",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -8,7 +8,7 @@
     "build": "tsc",
     "test": "jest  --forceExit",
     "test:watch": "jest --watch",
-    "start": "node dist/index.js"
+    "start": "concurrently \"tsc\" \"node dist/server.js\""
   },
   "dependencies": {
     "body-parser": "^1.19.0",
