--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "date-fns": "^2.16.1",
+    "faker": "^5.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
@@ -46,6 +47,7 @@
     "styled-components": "^5"
   },
   "devDependencies": {
+    "@types/faker": "^5.1.5",
     "@types/styled-components": "^5.1.7"
   }
 }
