--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,6 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "date-fns": "^2.16.1",
-    "faker": "^5.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
@@ -48,6 +47,7 @@
   },
   "devDependencies": {
     "@types/faker": "^5.1.5",
-    "@types/styled-components": "^5.1.7"
+    "@types/styled-components": "^5.1.7",
+    "jest-styled-components": "^7.0.3"
   }
 }
