refactor: route delete use email param

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,4 +1,12 @@
 {
-  "extends": "./tsconfig.base.json",
-  "exclude": ["node_modules", "src/tests"]
+  "compilerOptions": {
+    "module": "commonjs",
+    "outDir": "./dist",
+    "rootDir": "./src",
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true
+  },
+  "exclude": ["src/tests"]
 }
